* Migrated expensive Java concepts (e.g. `java:VirtualDependsOn`, `java-classpath:*`) to be executed in batches
* Fixed a problem for support of generic type variables (only last usage of the variable within a class was referenced e.g. for multiple declarations like `List<X>`)
* Upgraded ASM to 9.5 to enable support for Java 21 bytecode

== 1.12.0

* Added support for invocations of method references and lambda methods, e.g. `(:Method)-[:INVOKES]->(:Lambda:Method)` (see https://github.com/jQAssistant/jqa-java-plugin/issues/35[issue])
* Improved calculation of cyclomatic complexity for Java class methods

== 1.10.1

* Upgraded to ASM 9.2 to support the scan of Java 18 bytecode

== 1.10.0

* Add support for generic types, e.g. `(:Field)-[OF_GENERIC_TYPE]->(:ParameterizedType)`
* Added concept `java:GeneratedType` which can be extended by project specific concepts using `providesConcept`
* Added a `reason` attribute to `@jQASuppress` to allow human-readable description for the suppression, e.g.
+
[source,java]
----
@jQASuppress(value = "my-rules:SuppressedRule", reason = "This rule does not apply here.")
public class MyClass { }
----

== 1.9.0

* added concepts `java:PostConstruct` and `java:PreDestroy`
* improved concept `java:VirtualInvokes` to identify all potential non-abstract methods within the inheritance hierarchy that could be invoked
* upgraded to ASM 8.0 to support scanning of Java 14 bytecode

== 1.8.0

* Added concept `java:VirtualDependsOn` providing `VIRTUAL_DEPENDS_ON` relations based on `DEPENDS_ON` relations to super classes
* Added concept `java:VirtualInvokes` providing `VIRTUAL_INVOKES` relations representing virtual invocations
* Deprecated concept `java:InvokesOverriddenMethod` as it creates`INVOKES` relations that may be ambiguous (replaced by `VIRTUAL_INVOKES`)
* Type members (i.e. fields and methods) are now reported only using their signature.
Example: `com.acme.Foo#void doSomething()` is now reported as `void doSomething()`