@@ -69,15 +69,6 @@ external libraries not included in the scan) are represented by `:Type` nodes wi
 property `fqn` and `DECLARES` relations to their members. These are `:Field` or
 `:Method` labeled nodes which only provide the property `signature`.
 
-=== Configuration
-
-.Configuration properties
-[options="header"]
-|====
-| Property     			                  | Description														     	                    | Default
-| java.class.model.Type.DEPENDS_ON.weight | Enables/disables calculation of the weight attribute for `DEPENDS_ON` relations between types | `true`
-|====
-
 [[:Java:Type]]
 === Nodes labeled with :Java:Type
 A Java type. Can be qualified by either `:Class`, `:Interface`, `:Enum`, `:Record` or `:Annotation`
@@ -95,7 +86,6 @@ A Java type. Can be qualified by either `:Class`, `:Interface`, `:Enum`, `:Recor
 | final           | optional, `true` indicates that the type is final, e.g. `public final class...`
 | synthetic       | optional, `true` indicates that the type is synthetic, i.e. it has been generated
 | byteCodeVersion | The byte code version of the class file, e.g. 52 for "Java SE 8"
-| md5             | The MD5 hash sum of the class file.
 | valid           | true if the class file could be scanned successfully.
 |====
 
